
o Added basic support for palindrome finding: it can be achieved with the
  new findPalindromes() and findComplementedPalindromes() functions.
  Also added related utility functions palindromeArmLength(),
  palindromeLeftArm(), palindromeRightArm(), complementedPalindromeArmLength(),
  complementedPalindromeLeftArm() and complementedPalindromeRightArm().

o Added "matchLRPatterns" and "matchProbePair" methods for BStringViews
  objects.

o Added the isMatching() function.

o Change in terminology to align with established practices: "fuzzy matching"
  is now called "inexact matching". This change mostly affects the
  documentation. The only place where it also affects the API is that now
  'algo="naive-inexact"' must be used instead of 'algo="naive-fuzzy"' when
  calling the matchPattern() function or any other function that has the 'algo'
  argument.

o Renamed the 'mismatch' arg -> 'max.mismatch' for the matchPattern(),
  matchLRPatterns() and matchPDict() functions.

UTILITIES

o Added functions read.BStringSet(), read.DNAStringSet(), read.RNAStringSet(),
  read.AAStringSet() and write.XStringSet(). read.BStringSet() and family is
  now prefered over read.BStringViews() for loading a FASTA file into R.
  Renamed helper function BStringViewsToFASTArecords() ->
  XStringSetToFASTArecords().

o Added the replaceLetterAtLoc() generic function with a method for DNAString
  objects (methods for other types of objects will come later) for making
  a copy of a sequence where letters are replaced by new letters at some
  specified locations.

o Added the chartr() generic function with a method for XString, XStringSet
  and BStringViews objects.

o Made the "show" methods for XString, BStringViews and XStringAlign objects
  "getOption('width') aware" so that the user can control the width of the
  output they produce.

o Added the dinucleotideFrequency(), trinucleotideFrequency(),
  oligonucleotideFrequency(), strrev() and mkAllStrings() functions.
